2005-09-29  Richard Hult  <richard@imendio.com>

	* Work in progress, the first part of moving to dbus 0.5x. There
	are still some ServiceOwnerChange changes that need to be done.

2005-09-05  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.11.

2005-09-01  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c (ensure_service): Unref the reply, fixes a
	small leak.

2005-08-15  Mikael Hallendal  <micke@imendio.com>

	* Release 2.6.4.10  

2005-06-23  Mikael Hallendal  <micke@imendio.com>

	* gconf/gconf-sources.c: (gconf_source_free):
	- Free source->address, patch from GNOME Bugzilla #307887.

2005-06-21  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.9.

	* gconf/gconf-dbus.c (ensure_dbus_connection): 
	* gconf/gconfd-dbus.c (gconfd_dbus_init): Improve logging messages
	to help debugging.

	* backends/markup-write-state.c (markup_write_state_write): Fix
	logging format string, silences a build warning.

	* gconf/Makefile.am: Use correct path for the default dbus socket.

	* configure: Bump version.

2005-06-20  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.8.

	* configure.in: Bump version.

	* gconf/Makefile.am (systembusconfdir): Install system bus conf
	data when using the system bus.

2005-05-23  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.7.

	* Makefile.am: Dist README.dbus. 

	* README.dbus: Add information about the DBUS version.

	* configure.in: Bump version.

2005-05-23  Anders Carlsson  <andersca@imendio.com>

	* gconf/Makefile.am:
	Define the standard system bus socket
	
	* gconf/gconf-dbus.c:
	Use a separate connection for the bus.
	
2005-05-20  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.6.

	* configure.in: Bump version.

	* gconf/Makefile.am: Add localstatedir for consistency.

	* backends/markup-write-state.c (markup_write_state_write): Add
	log message when the state file can't be opened. Disable debug
	spew.

2005-05-17  Mikael Hallendal  <micke@imendio.com>

	* gconf/gconf-client.c: 