@@ -1,5 +1,12 @@
 2005-09-29  Richard Hult  <richard@imendio.com>
 
+	* Change ServiceOwner to NameOwner, and change the match rules
+	used to take advantage of argument matching rules, this makes both
+	the daemon and client wake up less, when other services come and
+	go.
+
+2005-09-29  Richard Hult  <richard@imendio.com>
+
 	* Work in progress, the first part of moving to dbus 0.5x. There
 	are still some ServiceOwnerChange changes that need to be done.
 
